# iqana_coinbase_backend

./: .gitignore  .pre-commit-config.yaml  README.md  deploy-manual.sh  pyproject.toml
.github/workflows/: deploy.yml
app/: aws_secrets.py  coinbase_client.py  main.py
deployment/cloudformation/: apprunner.yaml  template-base.yaml  template.yaml
deployment/envs/dev/: dev.env
docker/: docker-compose.yaml  dockerfile
tests/: README.md
tests/unit/: test_coinbase_client_unit.py  test_main_unit.py
